2007-08-07 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/ui/menus.xml: Changed menu items order.

2007-08-06 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    Some code moved from main_app.rb to result_text_view.rb.

    * lib/fantasdic/dict.rb: Fixed a bug when the lookup thread is killed.
    * lib/fantasdic/ui/main_app.rb: Some UI tweaks.

    * lib/fantasdic/ui/preferences_dialog.rb: 
    * data/fantasdic/glade/preferences_dialog.glade: Added "fonts" options.

    * lib/fantasdic/ui/utils.rb: Moved Pango::Layout helpers there.

    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/ui/menus.xml: Zoom+, Zoom- and Zoom normal buttons.
    
    * lib/fantasdic/ui/result_text_view.rb: Uses font from options.
    * lib/fantasdic/ui/print.rb: Uses font from options.

    * data/fantasdic/glade/add_dictionary_dialog.glade: Fixed typo.
    
    * po/POTFILES.in: Added print.rb.

2007-08-05 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/print.rb: Uses Pango::Layout::WRAP_WORD_CHAR instead of
    Pango::Layout::WRAP_CHAR.

    * lib/fantasdic/dict.rb:
    * lib/fantasdic/ui/main_app.rb:
    Move the code to hold connections from main_app.rb to dict.rb. This is to
    clean up main_app.rb (more coming).

    * lib/fantasdic/dict.rb:
    * lib/fantasdic/ui/main_app.rb:
    Move cache system from main_app.rb to dict.rb.

2007-08-02 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Better spacing between definitions.

    * lib/fantasdic/ui/print.rb: Checks that last page is not blank; if a new
    page is started and previous page's last line was a title, move it to the
    next page; fixes spacing between definitions.

2007-08-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui.rb: Requires print and some constants like SUPPORTS_IPC,
    SUPPORT_STATUS_ICON and SUPPORTS_PRINT.